integrated authentication with swagger
